[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "w3pyconnect"
version = "1.0.0"
authors = [
  { name="Edoardo Fullin", email="edoardo.fullin@outlook.com" },
]
description = "Library to get your available Voice, SMS and Data from Wind3"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/edofullin/w3pyconnect"
"Bug Tracker" = "https://github.com/edofullin/w3pyconnect/issues"